--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,5 +1,5 @@
 @Library('c3i')
-import jfrog.c3i.engine.C3iEngine
+import jfrog.c3i.C3iEngine
 
 def artifactoryURL = "https://conan.jfrog.io/conan"
 def credential = "c3i_on_artifactory"
