--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,9 +1,4 @@
-@Library('c3i')
-import jfrog.c3i.C3iEngine
+@Library('c3i') import jfrog.c3i.C3iEngine
 
-def artifactoryURL = "https://conan.jfrog.io/conan"
-def credential = "c3i_on_artifactory"
-
-
-def engine = new C3iEngine(this, artifactoryURL, credential, String winTmpPath)
+def engine = new C3iEngine(this, "https://conan.jfrog.io/conan")
 engine.runBuild()
