--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,8 +1,3 @@
 @Library('c3i')
-import org.jfrog.artifactory.client.model.Repository
-import main.groovy.org.jfrog.c3i.ConanArtifactoryRest
-import main.groovy.org.jfrog.c3i.C3iEngine
 
-def engine = new C3iEngine(this, "https://conan.jfrog.io/conan")
-engine.runBuild()
-
+c3i.runBuild(this)
