--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -18,6 +18,6 @@ withCredentials([usernamePassword(credentialsId: artifactoryCredentials,
 echo "HI THERE!"
 echo "HI ${c3i.runBuild}"
 
-c3i.runBuild(this, artifactoryURL, user, password)
+c3i.runBuild(this, artifactoryURL, user, password, artifactoryID)
 
 
