--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,7 +1,6 @@
 @Library('c3i') _
 
 def artifactoryCredentials = "c3i_on_artifactory"
-def artifactoryURL = "https://conan.jfrog.io/conan"
 
 def user
 def password
@@ -14,6 +13,6 @@ withCredentials([usernamePassword(credentialsId: artifactoryCredentials,
     password = env.ARTI_PASS
 }
 
-c3iManager.runBuild(this, artifactoryURL, user, password)
+c3iManager.runBuild(this, user, password)
 
 
