--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,18 +1,5 @@
 @Library('c3i') _
 
-def artifactoryCredentials = "c3i_on_artifactory"
-
-def user
-def password
-
-
-withCredentials([usernamePassword(credentialsId: artifactoryCredentials,
-                                  usernameVariable: 'ARTI_USER',
-                                  passwordVariable: 'ARTI_PASS')]) {
-    user = env.ARTI_USER
-    password = env.ARTI_PASS
-}
-
-c3iManager.runBuild(this, user, password)
+c3iManager.runBuild(this)
 
 
